tests/spec/emit/snapshots/block_scope_with_variable_shadowing.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> string {
    let x = "outer"
    {
      let x = "inner"
      let _ = x
    }
    x
  }
---
package main

func test() string {
	x := "outer"
	{
		x := "inner"
		_ = x
	}
	return x
}
