tests/spec/emit/snapshots/block_tail_append_no_writeback.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    let x = { s.append(2) }
    x
  }
---
package main

func test(s []int) []int {
	var x []int
	x = append(s, 2)
	return x
}
