tests/spec/emit/snapshots/block_tail_append_unused_binding.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) {
    let _x = { s.append(2) }
  }
---
package main

func test(s []int) {
	_ = append(s[:len(s):len(s)], 2)
}
