tests/spec/emit/snapshots/block_vs_struct_disambiguation.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Point { x: int }
  
  fn test_if() -> int {
    let x = 1;
    if true { x } else { 0 }
  }
  
  fn test_struct() -> Point {
    let x = 42;
    Point { x }
  }
---
package main

type Point struct {
	x int
}

func testIf() int {
	x := 1
	if true {
		return x
	}
	return 0
}

func testStruct() Point {
	x := 42
	return Point{x: x}
}
