tests/spec/emit/snapshots/blocking_send.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() {
    let ch = Channel.new<int>();
    ch.send(42);
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() {
	ch := make(chan int)
	lisette.ChannelSend(ch, 42)
}
