tests/spec/emit/snapshots/boolean_false.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> bool {
    false
  }
---
package main

func test() bool {
	return false
}
