tests/spec/emit/snapshots/boolean_true.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> bool {
    true
  }
---
package main

func test() bool {
	return true
}
